# rrr3d

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  changelog.txt  massmod.sln
LexStd/: LexStd.vcxproj  LexStd.vcxproj.filters
MapEditor/: ClassView.cpp  ClassView.h  FileView.cpp  FileView.h  MainFrm.cpp  MainFrm.h  MapEditor.cpp  MapEditor.h  MapEditor.rc  MapEditor.vcproj  MapEditor.vcxproj  MapEditor.vcxproj.filters  MapEditorDoc.cpp  MapEditorDoc.h  MapEditorView.cpp  MapEditorView.h  TraceView.cpp  ViewTree.cpp  ViewTree.h  resource.h
NetLib/: NetLib.vcxproj  NetLib.vcxproj.filters
RRR3d/: RRR3d.cpp  (+2 more)
src/: CMakeLists.txt
src/LexStd/: CMakeLists.txt
src/LexStd/header/: EulerAngles.h  lslAutoRef.h  lslBaseCollection.h  lslClassList.h  lslCollection.h  lslCollectionItem.h  lslCommon.h  lslComponent.h  lslContainer.h  lslException.h  lslObject.h  lslResource.h  lslSDK.h  lslSafeContainer.h  lslSerialValue.h  lslSerialization.h  lslUpdateAble.h  lslUtility.h
src/LexStd/source/: EulerAngles.cpp  lslCollectionItem.cpp  lslComponent.cpp  lslException.cpp  lslResource.cpp  lslSDK.cpp  lslSerialFileXml.cpp  lslSerializable.cpp  lslSerialization.cpp  lslUpdateAble.cpp  r3dMath.cpp
src/MapEditor/: CMakeLists.txt  ClassView.cpp  ClassView.h  FileView.cpp  FileView.h  MainFrm.cpp  MainFrm.h  MapEditor.cpp  MapEditor.rc  MapEditorDoc.cpp  MapEditorDoc.h  MapEditorView.cpp  MapEditorView.h  OutputWnd.cpp  TraceView.cpp  TraceView.h  ViewTree.cpp  ViewTree.h  resource.h  stdafx.cpp  stdafx.h
src/MathLib/: CMakeLists.txt
src/MathLib/header/: MathCommon.h  lslMath.h  lslMath.inl  lslVariant.h  r3dMath.h  stdafx.h
src/MathLib/header/d3d/: d3dx9math.h  d3dx9math.inl
src/MathLib/source/: lslMath.cpp  lslVariant.cpp  r3dMath.cpp
src/NetLib/: CMakeLists.txt
src/NetLib/header/: stdafx.h
src/NetLib/header/net/: NetChannel.h  NetClient.h  NetConnection.h  NetConnectionTCP.h  NetPlayer.h  NetServer.h  NetService.h
src/NetLib/include/net/: BitStream.h  INetChannel.h  INetPlayer.h  INetService.h  NetCommon.h  NetLib.h  NetModel.h
src/NetLib/source/net/: BitStream.cpp  NetChannel.cpp  NetClient.cpp  NetConnection.cpp  NetConnectionTCP.cpp  NetLib.cpp  NetModel.cpp  NetPlayer.cpp  NetServer.cpp  NetService.cpp
src/Platform/: CMakeLists.txt  d3dx9math.cpp
src/RRR3d/: CMakeLists.txt  RRR3d.cpp  stdafx.h
src/Render/: CMakeLists.txt
src/Render/header/: lslMath.h  lslVariant.h  stdafx.h
src/Render/source/: lslMath.cpp  lslVariant.cpp  r3dMath.cpp
src/Rock3dEngine/: CMakeLists.txt
src/Rock3dEngine/header/: GraphManager.h  r3dGraphTypes.h  stdafx.h
src/Rock3dEngine/header/graph/: Actor.h  ActorManager.h  ClearSurf.h  ContextInfo.h  DepthMap.h  Engine.h  FogPlane.h  FxManager.h  GrassField.h  HDREffect.h  MappingShaders.h  MaterialLibrary.h  OctreeSort.h  RenderToTexture.h  SceneManager.h  SceneNode.h  Shader.h  ShadowMapRender.h  SkyBox.h  StdNode.h  SunShaft.h  ToneMapping.h  VideoResource.h  WaterPlane.h
src/Rock3dEngine/header/graph/Driver/: D3D9RenderDriver.h  DriverTypes.h
src/Rock3dEngine/header/gui/: GUI.h
src/Rock3dEngine/header/include/graph/: IActor.h
src/Rock3dEngine/header/px/: Physx.h  Stream.h
src/Rock3dEngine/header/res/: D3DXImageFile.h  GraphResource.h
src/Rock3dEngine/source/: GraphManager.cpp  ProgressTimer.cpp
src/Rock3dEngine/source/graph/: Actor.cpp  ActorManager.cpp  BloomEffect.cpp  ClearSurf.cpp  ContextInfo.cpp  DepthMap.cpp  Engine.cpp  FogPlane.cpp  FxManager.cpp  GaussianBlur.cpp  GrassField.cpp  HDREffect.cpp  MappingShaders.cpp  MaterialLibrary.cpp  OctreeRender.cpp  OctreeSort.cpp  RenderToTexture.cpp  SceneManager.cpp  SceneNode.cpp  SceneRender.cpp  Shader.cpp  ShadowMapRender.cpp  SkyBox.cpp  StdNode.cpp  SunShaft.cpp  ToneMapping.cpp  VideoResource.cpp  WaterPlane.cpp
src/Rock3dEngine/source/graph/Driver/: D3D9RenderDriver.cpp  RenderDriver.cpp
src/Rock3dEngine/source/gui/: GUI.cpp
src/Rock3dEngine/source/px/: Physx.cpp  Stream.cpp
src/Rock3dEngine/source/res/: D3DXImageFile.cpp  GraphResource.cpp  R3DFile.cpp
src/Rock3dGame/: CMakeLists.txt
src/Rock3dGame/header/: stdafx.h  targetver.h
src/Rock3dGame/header/edit/: Edit.h  Map.h  SceneControl.h  Trace.h  Utils.h
src/Rock3dGame/header/game/: AICar.h  AIPlayer.h  AchievmentModel.h  CameraManager.h  ControlManager.h  DataBase.h  DialogMenu2.h  Environment.h  FinalMenu.h  FinishMenu.h  GameBase.h  GameCar.h  GameEvent.h  GameMode.h  GameObject.h  HudMenu.h  HumanPlayer.h  Logic.h  MainMenu2.h  Map.h  MapObj.h  Menu.h  MenuSystem.h  OptionsMenu.h  Player.h  Race.h  RaceMenu2.h  RecordLib.h  ResourceManager.h  RockCar.h  Trace.h  TraceGfx.h  View.h  Weapon.h  World.h
src/Rock3dGame/header/net/: NetBase.h  NetGame.h  NetPlayer.h  NetRace.h  SteamCommon.h  SteamService.h  p2pauth.h
src/Rock3dGame/header/snd/: Audio.h
src/Rock3dGame/header/video/: playback.h  video.h
src/Rock3dGame/include/: ICameraManager.h  IDataBase.h  IGameCar.h  IMapObj.h  ISceneControl.h  ITrace.h  IView.h  IWorld.h  Rock3dGame.h
src/Rock3dGame/source/: Rock3dGame.cpp  dllmain.cpp
src/Rock3dGame/source/edit/: Edit.cpp  EditDataBase.cpp  EditMap.cpp  EditTrace.cpp  EditUtils.cpp  SceneControl.cpp
src/Rock3dGame/source/game/: AICar.cpp  AIPlayer.cpp  AchievmentModel.cpp  CameraManager.cpp  ControlManager.cpp  DataBase.cpp  DialogMenu2.cpp  Environment.cpp  FinalMenu.cpp  FinishMenu.cpp  GameBase.cpp  GameCar.cpp  GameMode.cpp  GameObject.cpp  HudMenu.cpp  HumanPlayer.cpp  Logic.cpp  MainMenu2.cpp  Map.cpp  MapObj.cpp  Menu.cpp  MenuSystem.cpp  OptionsMenu.cpp  Player.cpp  Race.cpp  RaceMenu2.cpp  RecordLib.cpp  ResourceManager.cpp  RockCar.cpp  Trace.cpp  TraceGfx.cpp  View.cpp  Weapon.cpp  World.cpp
src/Rock3dGame/source/net/: NetGame.cpp  NetPlayer.cpp  NetRace.cpp  SteamService.cpp  p2pauth.cpp
src/Rock3dGame/source/snd/: Audio.cpp
src/Rock3dGame/source/video/: VideoPlayer.cpp  playback.cpp  video.cpp
src/XPlatform/: CMakeLists.txt
src/XPlatform/header/: d3dx9math.h  xplatform.h
src/XPlatform/source/: d3dx9math.cpp
src/tools/: rock3dExprot.ms
(+213 files in other folders)
